Закончена разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -21,59 +21,135 @@
         </ul>
       </nav>
     </header>
-    <main class="container">
-      <h1 class="visually-hidden">Дизайн-студия "Нёрдс"</h1>
-      <section class="slider">
-        <h2 class="visually-hidden">Слайдер</h2>
-        <ul class="slider-list">
-          <li class="slider-item">
-            <b>Долго, дорого, скрупулезно</b>
-            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-            <a href="#">Узнать больше</a>
-          </li>
-          <li class="slider-item">
-            <b>Любим математику как никто другой</b>
-            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-            <a href="#">Узнать больше</a>
-          </li>
-          <li class="slider-item">
-            <b>Только ночь, только хардкор</b>
-            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-            <a href="#">Узнать больше</a>
-          </li>
-        </ul>
+    <main >
+
+      <!--Раздел-центровщик-->
+      <section class="container">
+
+        <h1 class="visually-hidden">Дизайн-студия "Нёрдс"</h1>
+
+        <!--Слайдер-->
+        <section class="slider">
+          <h2 class="visually-hidden">Слайдер</h2>
+          <ul class="slider-list">
+            <li class="slider-item">
+              <b>Долго, дорого, скрупулезно</b>
+              <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+              <a href="#">Узнать больше</a>
+            </li>
+            <li class="slider-item">
+              <b>Любим математику как никто другой</b>
+              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+              <a href="#">Узнать больше</a>
+            </li>
+            <li class="slider-item">
+              <b>Только ночь, только хардкор</b>
+              <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+              <a href="#">Узнать больше</a>
+            </li>
+          </ul>
+        </section>
+
+        <!--Услуги-->
+        <section class="services">
+          <h2 class="visually-hidden">Услуги</h2>
+          <ul class="services-list">
+            <li class="services-item">
+              <h3>Веб-сайты</h3>
+              <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <a class="button" href="#">Заказать</a>
+            </li>
+            <li class="services-item">
+              <h3>Приложения</h3>
+              <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+              <a class="button" href="#">Заказать</a>
+            </li>
+            <li class="services-item">
+              <h3>Презентации</h3>
+              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+              <a class="button" href="#">Заказать</a>
+            </li>
+          </ul>
+        </section>
+
+        <!--Умения-->
+        <section class="skills">
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <b>Выполняем заказы на разработку:</b>
+          <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </section>
+
+        <!--Наши преимущества-->
+        <section class="advantages">
+          <div class="logo-nerds" ></div>
+          <h2 class="advantages-slogan">с 2004 года любим точность во всем:</h2>
+          <table>
+            <tr>
+              <td>146%</td>
+              <td>100%</td>
+              <td>50%</td>
+            </tr>
+            <tr>
+              <td>Уровень самоотдачи</td>
+              <td>Соблюдение сроков</td>
+              <td>Минимальная предоплата</td>
+            </tr>
+          </table>
+        </section>
+
+        <!--Наши клиенты-->
+        <section class="clients" >
+          <h2 class="visually-hidden">Наши клиенты</h2>
+          <ul class="clients-list">
+            <a href="#"><li class="clients-item">HTML Academy</li></a>
+            <a href="#"><li class="clients-item">Barbershop Borodinsky</li></a>
+            <a href="#"><li class="clients-item">Pink</li></a>
+            <a href="#"><li class="clients-item">Mishka</li></a>
+          </ul>
+        </section>
+        <!--Контакты и "Напишите нам"-->
+        <section class="write-us">
+          <h2>Напишите нам</h2>
+          <h3 class="white-us-name">NЁRDS DESIGN STUDIO</h3>
+          <p class="write-us-address">
+              191186, Санкт-Петербург,<br>
+              ул. Б. Конюшенная, д. 19/8<br>
+          </p>
+          <p class="write-us-phone">
+              тел. +7 (812) 275-75-75
+          </p>
+          <a class="button" href="write-us.html">Напишите нам</a>
+        </section>
       </section>
-      <section class="services">
-        <h2 class="visually-hidden">Услуги</h2>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <a class="button" href="#">Заказать</a>
-          </li>
-          <li class="services-item">
-            <h3>Приложения</h3>
-            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a class="button" href="#">Заказать</a>
-          </li>
-          <li class="services-item">
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a class="button" href="#">Заказать</a>
-          </li>
-        </ul>
+
+      <!--Карта-->
+      <section class="map">
+        <h2>Карта</h2>
+        <figure class="map-img">
+          <a href="#">
+            <img src="http://placehold.it/1200x300" alt="Карта расположения">
+          </a>
+        </figure>
       </section>
-      <section class="advantages">
-        <h2 class="visually-hidden">Наши преимущества</h2>
-        <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <b>Выполняем заказы на разработку:</b>
-        <ul>
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
-        </ul>
-      </section>
+
     </main>
+
+    <!--Футер сайта-->
+    <footer class="footer-main">
+      <h2 class="visually-hidden">Футер сайта</h2>
+      <ul class="footer-social">
+        <li><a class="social-button vk" href="#"><span class="visually-hidden">ВКонтакте</span></a></li>
+        <li><a class="social-button fb" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+        <li><a class="social-button insta" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+      </ul>
+      <h3 class="footer-friendship">Давайте дружить, это выгодно!</h3>
+      <p class="footer-discount">Скидка 10% для друзей из социальных сетей.</p>
+    </footer>
   </body>
 </html>
