--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a href="#" class="main-header-logo">
+        <a href="index.html" class="main-header-logo">
           <img src="img/index-logo.svg" width="160" height="65" alt="Дизайн-студия 'Нёрдс'">
         </a>
         <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
-          <li><a href="shop.html">Магазин</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
@@ -113,6 +113,7 @@
             <a href="#"><li class="clients-item">Mishka</li></a>
           </ul>
         </section>
+
         <!--Контакты и "Напишите нам"-->
         <section class="write-us">
           <h2>Напишите нам</h2>
