--- a/catalog.html
+++ b/catalog.html
@@ -25,38 +25,153 @@
   </header>
 
   <main>
-    <h1>Магазин готовых шаблонов</h1>
 
-    <section class="filters">
-      <h2 class="visually-hidden">Фильтр готовых шаблонов</h2>
-      <!-- Здесь будет форма -->
+    <section class="catalog">
+      <h1>Магазин готовых шаблонов</h1>
+
+      <section class="filters">
+        <h2 class="visually-hidden">Фильтр готовых шаблонов</h2>
+        <!-- Здесь будет форма -->
+      </section>
+
+      <!-- Сортировка товаров -->
+      <section class="sort">
+        <div class="catalog-sort-bar">
+          <h3 class="catalog-sort-header">Сортировка:</h3>
+          <ul class="catalog-sort-list-category">
+            <li class="sort-price sort-active"><a href="#">По цене</a></li>
+            <li class="sort-type"><a href="#">По типу</a></li>
+            <li class="sort-name"><a href="#">По названию</a></li>
+          </ul>
+          <ul class="catalog-sort-list-order">
+            <li><a class="ascending active" href="#">По возрастанию</a></li>
+            <li><a class="descending" href="#">По убыванию</a></li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Каталог готовых шаблонов -->
+      <ul class="products-list">
+
+        <li class="product-item">
+          <div class="browser">
+            <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+            <p>
+              <img src="http://placehold.it/360x40" width="360" height="40">
+            </p>
+          </div>
+          <p>
+            <img src="http://placehold.it/360x576" width="360" height="576" alt="Седона. Информационный сайт для туристов">
+          </p>
+          <!-- Описание шаблона -->
+          <div class="product-about">
+            <div class="title">SEDONA</div>
+            <div class="description">Информационный сайт для туристов</div>
+            <div class="price">9900 руб.</div>
+          </div>
+        </li>
+
+        <li class="product-item">
+          <div class="browser">
+            <p>
+              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+              <img src="http://placehold.it/360x40" width="360" height="40">
+            </p>
+          </div>
+          <p>
+            <img src="http://placehold.it/360x576" width="360" height="576" alt="PINK. Продуктовый лендинг приложения для iOS и Android">
+          </p>
+          <!-- Описание шаблона -->
+          <div class="product-about">
+            <div class="title">PINK APP</div>
+            <div class="description">Продуктовый лендинг приложения для iOS и Android</div>
+            <div class="price">9900 руб.</div>
+          </div>
+        </li>
+
+        <li class="product-item">
+          <div class="browser">
+            <p>
+              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+              <img src="http://placehold.it/360x40" width="360" height="40">
+            </p>
+          </div>
+          <p>
+            <img src="http://placehold.it/360x576" width="360" height="576" alt="BARBERSHOP. Сайт салона красоты. Для мужчин, да.">
+          </p>
+          <!-- Описание шаблона -->
+          <div class="product-about">
+            <div class="title">BARBERSHOP</div>
+            <div class="description">Сайт салона красоты. Для мужчин, да.</div>
+            <div class="price">9900 руб.</div>
+          </div>
+        </li>
+
+        <li class="product-item">
+          <div class="browser">
+            <p>
+              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+              <img src="http://placehold.it/360x40" width="360" height="40">
+            </p>
+          </div>
+          <p>
+            <img src="http://placehold.it/360x576" width="360" height="576" alt="MISHKA. Интернет-магазин вязаных игрушек">
+          </p>
+          <!-- Описание шаблона -->
+          <div class="product-about">
+            <div class="title">MISHKA</div>
+            <div class="description">Интернет-магазин вязаных игрушек</div>
+            <div class="price">9900 руб.</div>
+          </div>
+        </li>
+
+        <li class="product-item">
+          <div class="browser">
+            <p>
+              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+              <img src="http://placehold.it/360x40" width="360" height="40">
+            </p>
+          </div>
+          <p>
+            <img src="http://placehold.it/360x576" width="360" height="576" alt="A PLUS. Лендинг курсов повышения квалификации">
+          </p>
+          <!-- Описание шаблона -->
+          <div class="product-about">
+            <div class="title">A PLUS</div>
+            <div class="description">Лендинг курсов повышения квалификации</div>
+            <div class="price">9900 руб.</div>
+          </div>
+        </li>
+
+        <li class="product-item">
+          <div class="browser">
+            <p>
+              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+              <img src="http://placehold.it/360x40" width="360" height="40">
+            </p>
+          </div>
+          <p>
+            <img src="http://placehold.it/360x576" width="360" height="576" alt="КВАСТ. Промо-сайт производителя крафтового кваса">
+          </p>
+          <!-- Описание шаблона -->
+          <div class="product-about">
+            <div class="title">КВАСТ</div>
+            <div class="description">Промо-сайт производителя крафтового кваса</div>
+            <div class="price">9900 руб.</div>
+          </div>
+        </li>
+
+      </ul>
+
+      <!-- Пагинатор -->
+      <ul class="pagination-list">
+        <li class="pagination-item pagination-item-current"><a>1</a></li>
+        <li class="pagination-item"><a href="#">2</a></li>
+        <li class="pagination-item"><a href="#">3</a> </li>
+        <li class="pagination-item next"><a href="#">Следующая</a></li>
+      </ul>
+
     </section>
-
-    <!-- Сортировка товаров -->
-    <section class="sort">
-      <div class="catalog-sort-bar">
-        <h3 class="catalog-sort-header">Сортировка:</h3>
-        <ul class="catalog-sort-list-category">
-          <li class="sort-price sort-active"><a href="#">По цене</a></li>
-          <li class="sort-type"><a href="#">По типу</a></li>
-          <li class="sort-name"><a href="#">По названию</a></li>
-        </ul>
-        <ul class="catalog-sort-list-order">
-          <li><a class="ascending active" href="#">По возрастанию</a></li>
-          <li><a class="descending" href="#">По убыванию</a></li>
-        </ul>
-      </div>
-    </section>
-
-
-
-    <!-- Пагинатор -->
-    <ul class="pagination-list">
-      <li class="pagination-item pagination-item-current"><a>1</a></li>
-      <li class="pagination-item"><a href="#">2</a></li>
-      <li class="pagination-item"><a href="#">3</a> </li>
-      <li class="pagination-item next"><a href="#">Следующая</a></li>
-    </ul>
 
     <!--Контакты и "Напишите нам"-->
     <section class="write-us">
