Добавлены контекстные изображения на обе страницы

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a href="index.html" class="main-header-logo">
-          <img src="img/index-logo.svg" width="160" height="65" alt="Дизайн-студия 'Нёрдс'">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Дизайн-студия 'Нёрдс'">
         </a>
         <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
@@ -17,7 +17,7 @@
           <li><a href="#">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="cart">Корзина</li>
+          <li class="cart"><a href="#">Корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -36,16 +36,19 @@
               <b>Долго, дорого, скрупулезно</b>
               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
               <a href="#">Узнать больше</a>
+              <img src="img/slide1.png" width="698" height="413" alt="Скурпулезно">
             </li>
             <li class="slider-item">
               <b>Любим математику как никто другой</b>
               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
               <a href="#">Узнать больше</a>
+              <img src="img/slide2.png" width="663" height="430" alt="Точный расчет">
             </li>
             <li class="slider-item">
               <b>Только ночь, только хардкор</b>
               <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
               <a href="#">Узнать больше</a>
+              <img src="img/slide3.png" width="759" height="411" alt="Только хардкор">
             </li>
           </ul>
         </section>
@@ -134,7 +137,7 @@
         <h2>Карта</h2>
         <figure class="map-img">
           <a href="#">
-            <img src="http://placehold.it/1200x300" alt="Карта расположения">
+            <img src="img/map.jpg" width="1200" height="300" alt="Карта расположения">
           </a>
         </figure>
       </section>
