--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a href="index.html" class="main-header-logo">
-        <img src="img/index-logo.svg" width="160" height="65" alt="Дизайн-студия 'Нёрдс'">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Дизайн-студия 'Нёрдс'">
       </a>
       <ul class="site-navigation">
         <li><a href="#">Студия</a></li>
@@ -19,7 +19,7 @@
         <li><a href="#">Контакты</a></li>
       </ul>
       <ul class="user-navigation">
-        <li class="cart">Корзина</li>
+        <li class="cart"><a href="#">Корзина</a></li>
       </ul>
     </nav>
   </header>
@@ -61,7 +61,7 @@
             </p>
           </div>
           <p>
-            <img src="http://placehold.it/360x576" width="360" height="576" alt="Седона. Информационный сайт для туристов">
+            <img src="img/tmpl-sedona.jpg" width="360" height="576" alt="Седона. Информационный сайт для туристов">
           </p>
           <!-- Описание шаблона -->
           <div class="product-about">
@@ -79,7 +79,7 @@
             </p>
           </div>
           <p>
-            <img src="http://placehold.it/360x576" width="360" height="576" alt="PINK. Продуктовый лендинг приложения для iOS и Android">
+            <img src="img/tmpl-pink.jpg" width="360" height="576" alt="PINK. Продуктовый лендинг приложения для iOS и Android">
           </p>
           <!-- Описание шаблона -->
           <div class="product-about">
@@ -97,7 +97,7 @@
             </p>
           </div>
           <p>
-            <img src="http://placehold.it/360x576" width="360" height="576" alt="BARBERSHOP. Сайт салона красоты. Для мужчин, да.">
+            <img src="img/tmpl-barbershop.jpg" width="360" height="576" alt="BARBERSHOP. Сайт салона красоты. Для мужчин, да.">
           </p>
           <!-- Описание шаблона -->
           <div class="product-about">
@@ -115,7 +115,7 @@
             </p>
           </div>
           <p>
-            <img src="http://placehold.it/360x576" width="360" height="576" alt="MISHKA. Интернет-магазин вязаных игрушек">
+            <img src="img/tmpl-mishka.jpg" width="360" height="576" alt="MISHKA. Интернет-магазин вязаных игрушек">
           </p>
           <!-- Описание шаблона -->
           <div class="product-about">
@@ -133,7 +133,7 @@
             </p>
           </div>
           <p>
-            <img src="http://placehold.it/360x576" width="360" height="576" alt="A PLUS. Лендинг курсов повышения квалификации">
+            <img src="img/tmpl-aplus.jpg" width="360" height="576" alt="A PLUS. Лендинг курсов повышения квалификации">
           </p>
           <!-- Описание шаблона -->
           <div class="product-about">
@@ -151,7 +151,7 @@
             </p>
           </div>
           <p>
-            <img src="http://placehold.it/360x576" width="360" height="576" alt="КВАСТ. Промо-сайт производителя крафтового кваса">
+            <img src="img/tmpl-kvast.jpg" width="360" height="576" alt="КВАСТ. Промо-сайт производителя крафтового кваса">
           </p>
           <!-- Описание шаблона -->
           <div class="product-about">
@@ -193,7 +193,7 @@
       <h2>Карта</h2>
       <figure class="map-img">
         <a href="#">
-          <img src="http://placehold.it/1200x300" alt="Карта расположения">
+          <img src="img/map.jpg" width="1200" height="300" alt="Карта расположения">
         </a>
       </figure>
     </section>
