--- a/catalog.html
+++ b/catalog.html
@@ -1,215 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Магазин шаблонов</title>
-</head>
-<body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a href="index.html" class="main-header-logo">
-        <img src="img/nerds-logo.svg" width="160" height="65" alt="Дизайн-студия 'Нёрдс'">
-      </a>
-      <ul class="site-navigation">
-        <li><a href="#">Студия</a></li>
-        <li><a href="#">Клиенты</a></li>
-        <li class="site-navigation-current"><a href="#">Магазин</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-      <ul class="user-navigation">
-        <li class="cart"><a href="#">Корзина</a></li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Магазин шаблонов</title>
+  </head>
 
-  <main>
-
-    <section class="catalog">
-      <h1>Магазин готовых шаблонов</h1>
-
-      <section class="filters">
-        <h2 class="visually-hidden">Фильтр готовых шаблонов</h2>
-        <!-- Здесь будет форма -->
-      </section>
-
-      <!-- Сортировка товаров -->
-      <section class="sort">
-        <div class="catalog-sort-bar">
-          <h3 class="catalog-sort-header">Сортировка:</h3>
-          <ul class="catalog-sort-list-category">
-            <li class="sort-price sort-active"><a href="#">По цене</a></li>
-            <li class="sort-type"><a href="#">По типу</a></li>
-            <li class="sort-name"><a href="#">По названию</a></li>
-          </ul>
-          <ul class="catalog-sort-list-order">
-            <li><a class="ascending active" href="#">По возрастанию</a></li>
-            <li><a class="descending" href="#">По убыванию</a></li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- Каталог готовых шаблонов -->
-      <ul class="products-list">
-
-        <li class="product-item">
-          <div class="browser">
-            <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
-            <p>
-              <img src="http://placehold.it/360x40" width="360" height="40">
-            </p>
-          </div>
-          <p>
-            <img src="img/tmpl-sedona.jpg" width="360" height="576" alt="Седона. Информационный сайт для туристов">
-          </p>
-          <!-- Описание шаблона -->
-          <div class="product-about">
-            <div class="title">SEDONA</div>
-            <div class="description">Информационный сайт для туристов</div>
-            <div class="price">9900 руб.</div>
-          </div>
-        </li>
-
-        <li class="product-item">
-          <div class="browser">
-            <p>
-              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
-              <img src="http://placehold.it/360x40" width="360" height="40">
-            </p>
-          </div>
-          <p>
-            <img src="img/tmpl-pink.jpg" width="360" height="576" alt="PINK. Продуктовый лендинг приложения для iOS и Android">
-          </p>
-          <!-- Описание шаблона -->
-          <div class="product-about">
-            <div class="title">PINK APP</div>
-            <div class="description">Продуктовый лендинг приложения для iOS и Android</div>
-            <div class="price">9900 руб.</div>
-          </div>
-        </li>
-
-        <li class="product-item">
-          <div class="browser">
-            <p>
-              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
-              <img src="http://placehold.it/360x40" width="360" height="40">
-            </p>
-          </div>
-          <p>
-            <img src="img/tmpl-barbershop.jpg" width="360" height="576" alt="BARBERSHOP. Сайт салона красоты. Для мужчин, да.">
-          </p>
-          <!-- Описание шаблона -->
-          <div class="product-about">
-            <div class="title">BARBERSHOP</div>
-            <div class="description">Сайт салона красоты. Для мужчин, да.</div>
-            <div class="price">9900 руб.</div>
-          </div>
-        </li>
-
-        <li class="product-item">
-          <div class="browser">
-            <p>
-              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
-              <img src="http://placehold.it/360x40" width="360" height="40">
-            </p>
-          </div>
-          <p>
-            <img src="img/tmpl-mishka.jpg" width="360" height="576" alt="MISHKA. Интернет-магазин вязаных игрушек">
-          </p>
-          <!-- Описание шаблона -->
-          <div class="product-about">
-            <div class="title">MISHKA</div>
-            <div class="description">Интернет-магазин вязаных игрушек</div>
-            <div class="price">9900 руб.</div>
-          </div>
-        </li>
-
-        <li class="product-item">
-          <div class="browser">
-            <p>
-              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
-              <img src="http://placehold.it/360x40" width="360" height="40">
-            </p>
-          </div>
-          <p>
-            <img src="img/tmpl-aplus.jpg" width="360" height="576" alt="A PLUS. Лендинг курсов повышения квалификации">
-          </p>
-          <!-- Описание шаблона -->
-          <div class="product-about">
-            <div class="title">A PLUS</div>
-            <div class="description">Лендинг курсов повышения квалификации</div>
-            <div class="price">9900 руб.</div>
-          </div>
-        </li>
-
-        <li class="product-item">
-          <div class="browser">
-            <p>
-              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
-              <img src="http://placehold.it/360x40" width="360" height="40">
-            </p>
-          </div>
-          <p>
-            <img src="img/tmpl-kvast.jpg" width="360" height="576" alt="КВАСТ. Промо-сайт производителя крафтового кваса">
-          </p>
-          <!-- Описание шаблона -->
-          <div class="product-about">
-            <div class="title">КВАСТ</div>
-            <div class="description">Промо-сайт производителя крафтового кваса</div>
-            <div class="price">9900 руб.</div>
-          </div>
-        </li>
-
-      </ul>
-
-      <!-- Пагинатор -->
-      <ul class="pagination-list">
-        <li class="pagination-item pagination-item-current"><a>1</a></li>
-        <li class="pagination-item"><a href="#">2</a></li>
-        <li class="pagination-item"><a href="#">3</a> </li>
-        <li class="pagination-item next"><a href="#">Следующая</a></li>
-      </ul>
-
-    </section>
-
-    <!--Контакты и "Напишите нам"-->
-    <section class="write-us">
-        <h2>Напишите нам</h2>
-        <h3 class="white-us-name">NЁRDS DESIGN STUDIO</h3>
-        <p class="write-us-address">
-            191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8<br>
-        </p>
-        <p class="write-us-phone">
-            тел. +7 (812) 275-75-75
-        </p>
-        <a class="button" href="write-us.html">Напишите нам</a>
-      </section>
-    </section>
-
-    <!--Карта-->
-    <section class="map">
-      <h2>Карта</h2>
-      <figure class="map-img">
-        <a href="#">
-          <img src="img/map.jpg" width="1200" height="300" alt="Карта расположения">
+  <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a href="index.html" class="main-header-logo">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Дизайн-студия 'Нёрдс'">
         </a>
-      </figure>
+        <ul class="site-navigation">
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li class="site-navigation-current"><a href="#">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li class="cart"><a href="#">Корзина</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+
+      <section class="catalog">
+        <h1>Магазин готовых шаблонов</h1>
+
+        <section class="filters">
+          <h2 class="visually-hidden">Фильтр готовых шаблонов</h2>
+          <!-- Здесь будет форма -->
+        </section>
+
+        <!-- Сортировка товаров -->
+        <section class="sort">
+          <div class="catalog-sort-bar">
+            <h3 class="catalog-sort-header">Сортировка:</h3>
+            <ul class="catalog-sort-list-category">
+              <li class="sort-price sort-active"><a href="#">По цене</a></li>
+              <li class="sort-type"><a href="#">По типу</a></li>
+              <li class="sort-name"><a href="#">По названию</a></li>
+            </ul>
+            <ul class="catalog-sort-list-order">
+              <li><a class="ascending active" href="#">По возрастанию</a></li>
+              <li><a class="descending" href="#">По убыванию</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <!-- Каталог готовых шаблонов -->
+        <ul class="products-list">
+
+          <li class="product-item">
+            <div class="browser">
+              <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+              <p>
+                <img src="http://placehold.it/360x40" width="360" height="40">
+              </p>
+            </div>
+            <p>
+              <img src="img/tmpl-sedona.jpg" width="360" height="576" alt="Седона. Информационный сайт для туристов">
+            </p>
+            <!-- Описание шаблона -->
+            <div class="product-about">
+              <div class="title">SEDONA</div>
+              <div class="description">Информационный сайт для туристов</div>
+              <div class="price">9900 руб.</div>
+            </div>
+          </li>
+
+          <li class="product-item">
+            <div class="browser">
+              <p>
+                <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+                <img src="http://placehold.it/360x40" width="360" height="40">
+              </p>
+            </div>
+            <p>
+              <img src="img/tmpl-pink.jpg" width="360" height="576" alt="PINK. Продуктовый лендинг приложения для iOS и Android">
+            </p>
+            <!-- Описание шаблона -->
+            <div class="product-about">
+              <div class="title">PINK APP</div>
+              <div class="description">Продуктовый лендинг приложения для iOS и Android</div>
+              <div class="price">9900 руб.</div>
+            </div>
+          </li>
+
+          <li class="product-item">
+            <div class="browser">
+              <p>
+                <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+                <img src="http://placehold.it/360x40" width="360" height="40">
+              </p>
+            </div>
+            <p>
+              <img src="img/tmpl-barbershop.jpg" width="360" height="576" alt="BARBERSHOP. Сайт салона красоты. Для мужчин, да.">
+            </p>
+            <!-- Описание шаблона -->
+            <div class="product-about">
+              <div class="title">BARBERSHOP</div>
+              <div class="description">Сайт салона красоты. Для мужчин, да.</div>
+              <div class="price">9900 руб.</div>
+            </div>
+          </li>
+
+          <li class="product-item">
+            <div class="browser">
+              <p>
+                <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+                <img src="http://placehold.it/360x40" width="360" height="40">
+              </p>
+            </div>
+            <p>
+              <img src="img/tmpl-mishka.jpg" width="360" height="576" alt="MISHKA. Интернет-магазин вязаных игрушек">
+            </p>
+            <!-- Описание шаблона -->
+            <div class="product-about">
+              <div class="title">MISHKA</div>
+              <div class="description">Интернет-магазин вязаных игрушек</div>
+              <div class="price">9900 руб.</div>
+            </div>
+          </li>
+
+          <li class="product-item">
+            <div class="browser">
+              <p>
+                <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+                <img src="http://placehold.it/360x40" width="360" height="40">
+              </p>
+            </div>
+            <p>
+              <img src="img/tmpl-aplus.jpg" width="360" height="576" alt="A PLUS. Лендинг курсов повышения квалификации">
+            </p>
+            <!-- Описание шаблона -->
+            <div class="product-about">
+              <div class="title">A PLUS</div>
+              <div class="description">Лендинг курсов повышения квалификации</div>
+              <div class="price">9900 руб.</div>
+            </div>
+          </li>
+
+          <li class="product-item">
+            <div class="browser">
+              <p>
+                <!-- Это изображение вместе с картинкой или отдельно как контекстное? -->
+                <img src="http://placehold.it/360x40" width="360" height="40">
+              </p>
+            </div>
+            <p>
+              <img src="img/tmpl-kvast.jpg" width="360" height="576" alt="КВАСТ. Промо-сайт производителя крафтового кваса">
+            </p>
+            <!-- Описание шаблона -->
+            <div class="product-about">
+              <div class="title">КВАСТ</div>
+              <div class="description">Промо-сайт производителя крафтового кваса</div>
+              <div class="price">9900 руб.</div>
+            </div>
+          </li>
+
+        </ul>
+
+        <!-- Пагинатор -->
+        <ul class="pagination-list">
+          <li class="pagination-item pagination-item-current"><a>1</a></li>
+          <li class="pagination-item"><a href="#">2</a></li>
+          <li class="pagination-item"><a href="#">3</a> </li>
+          <li class="pagination-item next"><a href="#">Следующая</a></li>
+        </ul>
+
+      </section>
+
+      <!--Контакты и "Напишите нам"-->
+      <section class="write-us">
+          <h2>Напишите нам</h2>
+          <h3 class="white-us-name">NЁRDS DESIGN STUDIO</h3>
+          <p class="write-us-address">
+              191186, Санкт-Петербург,<br>
+              ул. Б. Конюшенная, д. 19/8<br>
+          </p>
+          <p class="write-us-phone">
+              тел. +7 (812) 275-75-75
+          </p>
+          <a class="button" href="write-us.html">Напишите нам</a>
+        </section>
+      </section>
+
+      <!--Карта-->
+      <section class="map">
+        <h2>Карта</h2>
+        <figure class="map-img">
+          <a href="#">
+            <img src="img/map.jpg" width="1200" height="300" alt="Дизайн-студия Нердс. Адрес: 191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8. Телефон: +7 (812) 275-75-75">
+          </a>
+        </figure>
+      </section>
+
+    </main>
+
+    <!--Футер сайта-->
+    <footer class="footer-main">
+      <h2 class="visually-hidden">Футер сайта</h2>
+      <ul class="footer-social">
+        <li><a class="social-button vk" href="#"><span class="visually-hidden">ВКонтакте</span></a></li>
+        <li><a class="social-button fb" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+        <li><a class="social-button insta" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+      </ul>
+      <h3 class="footer-friendship">Давайте дружить, это выгодно!</h3>
+      <p class="footer-discount">Скидка 10% для друзей из социальных сетей.</p>
+    </footer>
+
+    <section class="modal modal-write-us">
+      <h2>Напишите нам</h2>
+      <form class="write-us" method="post" action="https://echo.htmlacademy.ru">
+        <div class="modal-container">
+          <div class="write-us-list-inputs">
+            <div class="write-us-field name">
+              <label class="write-us-name" for="write-us-name">Ваше имя:</label>
+              <input id="write-us-name" type="text" name="write-us-name" placeholder="Представьтесь, пожалуйста">
+            </div>
+            <div class="write-us-field email">
+              <label class="write-us-email" for="write-us-email">Ваш email:</label>
+              <input  id="write-us-email" type="email" name="write-us-email" placeholder="Для отправки ответа">
+            </div>
+          </div>
+          <div class="write-us-message">
+            <label for="write-us-message">Текст письма:</label>
+            <textarea class="write-us-letter" name="write-us-message" id="write-us-message" cols="30" rows="10" placeholder="В свободной форме"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div class="modal-container">
+            <button class="button write-us-button" type="submit">Отправить</button>
+          </div>
+        </div>
+      </form>
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
-  </main>
 
-  <!--Футер сайта-->
-  <footer class="footer-main">
-    <h2 class="visually-hidden">Футер сайта</h2>
-    <ul class="footer-social">
-      <li><a class="social-button vk" href="#"><span class="visually-hidden">ВКонтакте</span></a></li>
-      <li><a class="social-button fb" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-      <li><a class="social-button insta" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
-    </ul>
-    <h3 class="footer-friendship">Давайте дружить, это выгодно!</h3>
-    <p class="footer-discount">Скидка 10% для друзей из социальных сетей.</p>
-  </footer>
-
-</body>
+  </body>
 </html>
