--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
               <b>Долго, дорого, скрупулезно</b>
               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
               <a href="#">Узнать больше</a>
-              <img src="img/slide1.png" width="698" height="413" alt="Скурпулезно">
+              <img src="img/slide1.png" width="698" height="413" alt="Нердс делает свою работу очень скурпулезно">
             </li>
             <li class="slider-item">
               <b>Любим математику как никто другой</b>
               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
               <a href="#">Узнать больше</a>
-              <img src="img/slide2.png" width="663" height="430" alt="Точный расчет">
+              <img src="img/slide2.png" width="663" height="430" alt="Нердс любит математику и делает точный расчет">
             </li>
             <li class="slider-item">
               <b>Только ночь, только хардкор</b>
               <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
               <a href="#">Узнать больше</a>
-              <img src="img/slide3.png" width="759" height="411" alt="Только хардкор">
+              <img src="img/slide3.png" width="759" height="411" alt="Сотрудники Нердс очень креативны и часто работают ночью">
             </li>
           </ul>
         </section>
