--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
         <!--Слайдер-->
         <section class="slider">
           <h2 class="visually-hidden">Слайдер</h2>
+          <!-- Переключатель слайдов -->
+          <ul class="slide-switcher">
+            <li class="slide-radio">
+              <button class="slide-btn">Первый слайд</button>
+            </li>
+            <li class="slide-radio">
+              <button class="slide-btn">Второй слайд</button>
+            </li>
+            <li class="slide-radio">
+              <button class="slide-btn">Третий слайд</button>
+            </li>
+          </ul>
+          <!-- Содержимой слайдов -->
           <ul class="slider-list">
             <li class="slider-item">
               <b>Долго, дорого, скрупулезно</b>
@@ -81,10 +94,10 @@
           <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
           <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
           <b>Выполняем заказы на разработку:</b>
-          <ul>
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          <ul class="skills-list">
+            <li class="skills-item">Веб-сайтов любой сложности</li>
+            <li class="skills-item">Мобильных приложений для iOS и Android</li>
+            <li class="skills-item">Слайдшоу и видео для корпоративных презентаций</li>
           </ul>
         </section>
 
