--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
   <body class="inner-page">
     <header class="main-header">
       <nav class="main-navigation">
-        <a href="index.html" class="main-header-logo">
+        <a class="nerds-logo" href="index.html" class="main-header-logo">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="Дизайн-студия 'Нёрдс'">
         </a>
         <ul class="site-navigation">
@@ -96,7 +96,7 @@
               </ul>
             </fieldset>
 
-            <button class="filter-apply-button" type="submit" >Показать</button>
+            <button class="button grey filter-apply-button" type="submit" ><span class="button-text">Показать</span></button>
           </form>
         </section>
 
@@ -250,7 +250,7 @@
           <p class="write-us-phone">
               тел. +7 (812) 275-75-75
           </p>
-          <a class="button" href="write-us.html">Напишите нам</a>
+          <a class="button red" href="write-us.html"><span class="button-text">Напишите нам</span></a>
         </section>
       </section>
 
@@ -299,7 +299,7 @@
         </div>
         <div class="modal-footer">
           <div class="modal-container">
-            <button class="button write-us-button" type="submit">Отправить</button>
+            <button class="button red write-us-button" type="submit"><span class="button-text">Отправить</span></button>
           </div>
         </div>
       </form>
