Базовая страница каталога почти закончена (осталось стилизовать пагинацию

--- a/catalog.html
+++ b/catalog.html
@@ -64,7 +64,7 @@
                   <label for="filter-fixed">Фиксированная</label>
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="filter-grid" id="filter-liquid">
+                  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="filter-grid" id="filter-liquid" disabled>
                   <label for="filter-liquid">Резиновая</label>
                 </li>
               </ul>
@@ -90,13 +90,13 @@
                   <label for="filter-galary">Галерея</label>
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="filter-cart" id="filter-cart">
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="filter-cart" id="filter-cart" disabled>
                   <label for="filter-cart">Корзина</label>
                 </li>
               </ul>
             </fieldset>
 
-            <button class="button grey filter-apply-button" type="submit" ><span class="button-text">Показать</span></button>
+            <button class="button grey filter-apply-button" type="submit"><span class="button-text">Показать</span></button>
           </form>
         </section>
 
@@ -131,9 +131,9 @@
             </p>
             <!-- Описание шаблона -->
             <div class="product-about">
-              <div class="title">SEDONA</div>
-              <div class="description">Информационный сайт для туристов</div>
-              <div class="price">9900 руб.</div>
+              <h2 class="product-title">SEDONA</h2>
+              <p class="product-description">Информационный сайт для туристов</p>
+              <a href="#" class="button red price"><span class="button-text">9900 руб.</span></a>
             </div>
           </li>
 
@@ -149,9 +149,9 @@
             </p>
             <!-- Описание шаблона -->
             <div class="product-about">
-              <div class="title">PINK APP</div>
-              <div class="description">Продуктовый лендинг приложения для iOS и Android</div>
-              <div class="price">9900 руб.</div>
+              <h3 class="product-title">PINK APP</h3>
+              <p class="product-description">Продуктовый лендинг приложения для iOS и Android</p>
+              <a href="#" class="button red price"><span class="button-text">9900 руб.</span></a>
             </div>
           </li>
 
@@ -167,9 +167,9 @@
             </p>
             <!-- Описание шаблона -->
             <div class="product-about">
-              <div class="title">BARBERSHOP</div>
-              <div class="description">Сайт салона красоты. Для мужчин, да.</div>
-              <div class="price">9900 руб.</div>
+              <h3 class="product-title">BARBERSHOP</h3>
+              <p class="product-description">Сайт салона красоты. Для мужчин, да.</p>
+              <a href="#" class="button red price"><span class="button-text">9900 руб.</span></a>
             </div>
           </li>
 
@@ -185,9 +185,9 @@
             </p>
             <!-- Описание шаблона -->
             <div class="product-about">
-              <div class="title">MISHKA</div>
-              <div class="description">Интернет-магазин вязаных игрушек</div>
-              <div class="price">9900 руб.</div>
+              <h3 class="product-title">MISHKA</h3>
+              <p class="product-description">Интернет-магазин вязаных игрушек</p>
+              <a href="#" class="button red price"><span class="button-text">9900 руб.</span></a>
             </div>
           </li>
 
@@ -203,9 +203,9 @@
             </p>
             <!-- Описание шаблона -->
             <div class="product-about">
-              <div class="title">A PLUS</div>
-              <div class="description">Лендинг курсов повышения квалификации</div>
-              <div class="price">9900 руб.</div>
+              <h3 class="product-title">A PLUS</h3>
+              <p class="product-description">Лендинг курсов повышения квалификации</p>
+              <a href="#" class="button red price"><span class="button-text">9900 руб.</span></a>
             </div>
           </li>
 
@@ -221,9 +221,9 @@
             </p>
             <!-- Описание шаблона -->
             <div class="product-about">
-              <div class="title">КВАСТ</div>
-              <div class="description">Промо-сайт производителя крафтового кваса</div>
-              <div class="price">9900 руб.</div>
+              <h3 class="product-title">КВАСТ</h3>
+              <p class="product-description">Промо-сайт производителя крафтового кваса</p>
+              <a href="#" class="button red price"><span class="button-text">9900 руб.</span></a>
             </div>
           </li>
 
@@ -231,10 +231,10 @@
 
         <!-- Пагинатор -->
         <ul class="pagination-list">
-          <li class="pagination-item pagination-item-current"><a>1</a></li>
-          <li class="pagination-item"><a href="#">2</a></li>
-          <li class="pagination-item"><a href="#">3</a> </li>
-          <li class="pagination-item next"><a href="#">Следующая</a></li>
+          <li class="pagination-item pagination-item-current button grey"><a><span class="button-text">1</span></a></li>
+          <li class="pagination-item button grey"><a href="#"><span class="button-text">2</span></a></li>
+          <li class="pagination-item button grey"><a href="#"><span class="button-text">3</span></a></li>
+          <li class="pagination-item next button grey"><a href="#"><span class="button-text">Следующая</span></a></li>
         </ul>
 
       </section>
