--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </footer>
 
     <section class="modal modal-write-us">
-      <h2>Напишите нам</h2>
+      <h2 class="write-us-header">Напишите нам</h2>
       <form class="write-us" method="post" action="https://echo.htmlacademy.ru">
         <div class="modal-container">
           <div class="write-us-list-inputs">
